[package]
name = "epoch-calc"
version = "0.1.1"
edition = "2021"
authors = ["roomtin"]
readme = "README.md"
description = "Small utility for dealing with conversions between human readable dates and Unix Timestamps."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.27"

# This sets the binary name to "epoch"
[[bin]]
name = "epoch"
path = "src/main.rs"

